phone app layout clean up

--- a/PhoneToModuleBluetooth/app/src/main/res/layout/tank_control_layout.xml
+++ b/PhoneToModuleBluetooth/app/src/main/res/layout/tank_control_layout.xml
@@ -72,7 +72,7 @@
         tools:ignore="MissingConstraints" />
 
 
-
+    <!-- disconnect button -->
     <Button
         android:id="@+id/close_connection"
         android:layout_width="wrap_content"
