--- a/PhoneToModuleBluetooth/app/src/main/res/layout/activity_main.xml
+++ b/PhoneToModuleBluetooth/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Hello World!"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-    
+    <!-- List of all devices, empty before refresh -->
     <ListView
         android:id="@+id/list_all_devices"
         android:layout_width="wrap_content"
@@ -25,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
+    <!-- Refresh button-->
     <Button
         android:id="@+id/refresh_button"
         android:layout_width="0dp"
