--- a/PhoneToModuleBluetooth/app/src/main/res/values/colors.xml
+++ b/PhoneToModuleBluetooth/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+
+        <!-- default ui colors-->
+        <!--    <color name="colorPrimary">#008577</color>-->
+        <!--    <color name="colorPrimaryDark">#00574B</color>-->
+        <!--    <color name="colorAccent">#D81B60</color>-->
+
+        <color name="colorPrimary">#f27935</color>
+        <color name="colorPrimaryDark">#D55A14</color>
+        <color name="colorAccent">#26C6DA</color>
+
 </resources>
